# exchange-data-normalizer

./: Cargo.toml  LICENSE  README.md  compute_latency.py  latencies.txt  metrics_snapshot.txt  notes.md
docs/adr/: 0001-publisher-transport.md
src/: lib.rs  main.rs  publisher.rs  types.rs
src/connectors/: binance.rs  kraken.rs  mod.rs
tests/: connector_integration.rs
