[package]
name = "exchange-data-normalizer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.3"

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util"] }